--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@ hr.drop_shadow {
     
 </ul>
 
-<p style="text-align:center"> <img src="pictures/empresas3.jpg" alt="tipos de empresas" style="width:300px;height:450px;"> </p>
+<p style="text-align:center"> <img src="pictures/uan.png" alt="tipos de empresas" style="width:300px;height:450px;"> </p>
     
-<p style="text-align:justify"> La chuta que pario pilatos es La empresa social tiene un principio ético: el de tratar a las personas pobres como clientes emprendedores y no como mendigos. Yunus ha afirmado que la caridad o la asistencia social pueden ser tan dañinas como no hacer nada, ya que <i>“la limosna es la mayor ofensa que se le puede hacer a un pobre” </i> (Yunus, 2010). La idea es que promover el emprendurismo y no la caridad es el camino de la empresa social para superar la pobreza. </p>
+<p style="text-align:justify"> La empresa social tiene un principio ético: el de tratar a las personas pobres como clientes emprendedores y no como mendigos. Yunus ha afirmado que la caridad o la asistencia social pueden ser tan dañinas como no hacer nada, ya que <i>“la limosna es la mayor ofensa que se le puede hacer a un pobre” </i> (Yunus, 2010). La idea es que promover el emprendurismo y no la caridad es el camino de la empresa social para superar la pobreza. </p>
 
 <p style="color:darkblue; font-size:120%;"> Ejemplos de empresas sociales</p>
 
